Fix table reference: tab:hero -> tab:hero-run

--- a/paper/main_tmlr.tex
+++ b/paper/main_tmlr.tex
@@ -684,7 +684,7 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
 \end{remark}
 
 \begin{remark}[Landscape geometry vs.\ optimization dynamics]\label{rem:landscape-dynamics}
-  Theorem~\ref{thm:phase-transition} characterizes the \emph{static geometry} of the loss surface and does not predict optimization outcomes directly. The obvious implication --- that gradient descent should fail below $\gamma_\star$ --- is empirically false. In 960 independent optimization runs spanning $\gamma \in [0.2\gamma_\star, 2.0\gamma_\star]$, every converged run found a global minimum (Section~\ref{sec:landscape-dynamics}), including at $\gamma = 0.2\gamma_\star$, deep in the subcritical regime where the expected number of spurious minima is $e^{\Omega(n)}$. The gap between landscape topology and optimization difficulty is not a finite-size artifact: it persists at $n = 1500$ (Table~\ref{tab:hero}). We return to possible explanations --- vanishing basin widths, optimization inductive bias --- in Section~\ref{sec:landscape-dynamics}.
+  Theorem~\ref{thm:phase-transition} characterizes the \emph{static geometry} of the loss surface and does not predict optimization outcomes directly. The obvious implication --- that gradient descent should fail below $\gamma_\star$ --- is empirically false. In 960 independent optimization runs spanning $\gamma \in [0.2\gamma_\star, 2.0\gamma_\star]$, every converged run found a global minimum (Section~\ref{sec:landscape-dynamics}), including at $\gamma = 0.2\gamma_\star$, deep in the subcritical regime where the expected number of spurious minima is $e^{\Omega(n)}$. The gap between landscape topology and optimization difficulty is not a finite-size artifact: it persists at $n = 1500$ (Table~\ref{tab:hero-run}). We return to possible explanations --- vanishing basin widths, optimization inductive bias --- in Section~\ref{sec:landscape-dynamics}.
 \end{remark}
 
 \begin{figure}[H]
